--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -313,7 +313,7 @@ img.slide-modal__img {
 
 .request {
     @include padding-block;
-    background: url(images/request.jpg) no-repeat;
+    background: url(/images/request.jpg) no-repeat;
     background-size: cover;
 
 
