--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -110,9 +110,14 @@ input {
 
 .header {
     display: flex;
-    gap: 70px;
-    justify-content: flex-end;
-    font-size: 16px;
+    justify-content: space-between;
+    align-items: center;
+    &-links {
+        display: flex;
+        gap: 70px;
+        justify-content: flex-end;
+        font-size: 16px;
+    }
     &__link {
         color: $grey;
         font-weight: 500;
@@ -288,7 +293,7 @@ img.slide-modal__img {
     &__title {
         @include title($grey);
     }
-    &__list__item {
+    &-list__item {
         display: flex;
         align-items: center;
         gap: 20px;
@@ -537,7 +542,7 @@ img.slide-modal__img {
             font-size: 18px;
             padding: 30px 0 20px;
         }
-        &__list__item {
+        &-list__item {
             gap: 10px;
             font-size: 14px;
             padding: 5px 0;
